Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134702

QT_QPA_PLATFORMTHEME=generic doesn't work on KDE and GTK environments

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P4: Low P4: Low
    • 6.5.9, 6.8.4, 6.9.1, 6.10.0 FF
    • 5.15, 6.5, 6.8, 6.9
    • QPA
    • None
    • Linux/Wayland, Linux/X11
    • 22e05d74b (dev), 56db6d25a (6.9), e41c96120 (6.8), 8ede178fd (dev), 63ba867dd (dev), 75663be3b (6.9), 12ea4c92a (6.9), ef3a44013 (6.8), 66229e7c9 (6.8), 8b321185f (tqtc/lts-6.5), 09c895f35 (tqtc/lts-6.5)

      This is bugging me for quite a long time complicating testing applications with different themes. I assume it's due to QPlatformThemeFactory::create and QGuiApplicationPrivate::platform_integration->createPlatformTheme being tried in separate for loops at https://github.com/qt/qtbase/blob/a2e60ebee3737548d1be14fdbb39b08c515ae602/src/gui/kernel/qguiapplication.cpp#L1365-L1391. If they were both tried in one for loop, this wouldn't be an issue.

        For Gerrit Dashboard: QTBUG-134702
        # Subject Branch Project Status CR V

            axelspoerl Axel Spoerl
            ilya-fedin Ilya Fedin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: