Refactor and fix platform theme selection

Finding a platform theme for the list of theme names happened in two
separate loops. The first loop checked for a platform theme plugin, the
second for a platform integration plugin. In case a theme name was
passed from the environment (with the -platformtheme command line
argument or by setting QT_QPA_PLATFORMTHEME), it was ignored if it was
a platform integration plugin and a platform theme plugin was found
in the first loop.

Combine both loops, in the assumption that the list of theme names
is always correctly prioritized.

Pick-to: 6.8 6.5
Fixes: QTBUG-134702
Change-Id: I2703236dc0f406aeb48529f8e53de76c394b7172
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 8ede178fd3427233ce368a2f69363a30a9468215)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>